fix: real light mode colors instead of dark mode colors in :root

--- a/src/style.css
+++ b/src/style.css
@@ -35,59 +35,60 @@
   --default-transition-duration: .15s;
   --default-transition-timing-function: cubic-bezier(.4, 0, .2, 1);
 
-  /* Light Theme */
-  --background: #010204;
-  --foreground: #f8f8f8;
-  --card: #04050d;
-  --card-foreground: #f8f8f8;
-  --popover: #020307;
-  --popover-foreground: #f8f8f8;
-  --primary: #0079ba;
-  --primary-foreground: #f8f8f8;
-  --secondary: #0d111d;
-  --secondary-foreground: #f8f8f8;
-  --muted: #0a0d16;
-  --muted-foreground: #7d808a;
-  --accent: #e62e1e;
-  --accent-foreground: #f8f8f8;
-  --destructive: #e50025;
+    /* Light Theme */
+  --background: #fdfdfc;
+  --foreground: #020817;
+  --card: #ffffff;
+  --card-foreground: #020817;
+  --popover: #ffffff;
+  --popover-foreground: #020817;
+  --primary: #4F46E5;
+  --primary-foreground: #ffffff;
+  --secondary: #f1f5f9;
+  --secondary-foreground: #0f172a;
+  --muted: #f8fafc;
+  --muted-foreground: #64748b;
+  --accent: #f1f5f9;
+  --accent-foreground: #0f172a;
+  --destructive: #ef4444;
   --destructive-foreground: #f8f8f8;
-  --border: #121522;
-  --input: #121522;
-  --ring: #0079ba;
-  --chart-1: #0079ba;
+  --border: #e2e8f0;
+  --input: #e2e8f0;
+  --ring: #4F46E5;
+  
+  --chart-1: #4F46E5;
   --chart-2: #e62e1e;
   --chart-3: #c35dd9;
   --chart-4: #00b9a2;
   --chart-5: #f88f4f;
 
-  --sidebar: #020307;
-  --sidebar-foreground: #f8f8f8;
-  --sidebar-primary: #0079ba;
-  --sidebar-primary-foreground: #f8f8f8;
-  --sidebar-accent: #0d111d;
-  --sidebar-accent-foreground: #f8f8f8;
-  --sidebar-border: #121522;
-  --sidebar-ring: #0079ba;
+  --sidebar: #f8fafc;
+  --sidebar-foreground: #020817;
+  --sidebar-primary: #4F46E5;
+  --sidebar-primary-foreground: #ffffff;
+  --sidebar-accent: #e2e8f0;
+  --sidebar-accent-foreground: #0f172a;
+  --sidebar-border: #cbd5e1;
+  --sidebar-ring: #4F46E5;
 
   --fd-sidebar-drawer-offset: 100%;
 
-  --color-fd-background: #f5f5f5;
-  --color-fd-foreground: #0a0a0a;
-  --color-fd-muted: #f5f5f5;
-  --color-fd-muted-foreground: #737373;
-  --color-fd-popover: #fafafa;
-  --color-fd-popover-foreground: #272727;
-  --color-fd-card: #f1f1f1;
-  --color-fd-card-foreground: #0a0a0a;
-  --color-fd-border: #cccccc80;
-  --color-fd-primary: #171717;
-  --color-fd-primary-foreground: #fafafa;
-  --color-fd-secondary: #ededed;
-  --color-fd-secondary-foreground: #171717;
-  --color-fd-accent: #d1d1d180;
-  --color-fd-accent-foreground: #171717;
-  --color-fd-ring: #a3a3a3;
+  --color-fd-background: #fdfdfc;
+  --color-fd-foreground: #020817;
+  --color-fd-muted: #f8fafc;
+  --color-fd-muted-foreground: #64748b;
+  --color-fd-popover: #ffffff;
+  --color-fd-popover-foreground: #020817;
+  --color-fd-card: #ffffff;
+  --color-fd-card-foreground: #020817;
+  --color-fd-border: #e2e8f0;
+  --color-fd-primary: #4F46E5;
+  --color-fd-primary-foreground: #ffffff;
+  --color-fd-secondary: #f1f5f9;
+  --color-fd-secondary-foreground: #0f172a;
+  --color-fd-accent: #f1f5f9;
+  --color-fd-accent-foreground: #0f172a;
+  --color-fd-ring: #4F46E5;
   --color-fd-overlay: #0003;
   --color-fd-info: #3080ff;
   --color-fd-warning: #f99c00;
@@ -149,39 +150,39 @@
 
 @supports (color:lab(0% 0 0)) {
   :root {
-    --background: lab(.442928% .138126 -1.08481);
-    --foreground: lab(97.68% -.0000298023 .0000119209);
-    --card: lab(1.50495% .368677 -3.17218);
-    --card-foreground: lab(97.68% -.0000298023 .0000119209);
-    --popover: lab(.875282% .173211 -1.61839);
-    --popover-foreground: lab(97.68% -.0000298023 .0000119209);
-    --primary: lab(46.4789% -4.04388 -76.4089);
-    --primary-foreground: lab(97.68% -.0000298023 .0000119209);
-    --secondary: lab(5.12075% .868224 -8.33661);
-    --secondary-foreground: lab(97.68% -.0000298023 .0000119209);
-    --muted: lab(3.60994% .496283 -5.35383);
-    --muted-foreground: lab(53.5141% .166982 -5.6458);
-    --accent: lab(51.4727% 68.4449 55.9028);
-    --accent-foreground: lab(97.68% -.0000298023 .0000119209);
-    --destructive: lab(48.8037% 76.3079 51.5884);
-    --destructive-foreground: lab(97.68% -.0000298023 .0000119209);
-    --border: lab(7.05066% .969283 -9.04949);
-    --input: lab(7.05066% .969283 -9.04949);
-    --ring: lab(46.4789% -4.04388 -76.4089);
-    --chart-1: lab(46.4789% -4.04388 -76.4089);
+    --background: lab(99% 0 0);
+    --foreground: lab(8.85% -2.57 -6.23);
+    --card: lab(100% 0 0);
+    --card-foreground: lab(8.85% -2.57 -6.23);
+    --popover: lab(100% 0 0);
+    --popover-foreground: lab(8.85% -2.57 -6.23);
+    --primary: lab(36.1% 37.89 -85.12);
+    --primary-foreground: lab(100% 0 0);
+    --secondary: lab(96.11% -1.13 -2.71);
+    --secondary-foreground: lab(14.86% -.83 -3.42);
+    --muted: lab(97.82% -.68 -1.61);
+    --muted-foreground: lab(53.51% .16 -5.64);
+    --accent: lab(96.11% -1.13 -2.71);
+    --accent-foreground: lab(14.86% -.83 -3.42);
+    --destructive: lab(54.48% 66.86 42.06);
+    --destructive-foreground: lab(100% 0 0);
+    --border: lab(92.36% -.86 -2.13);
+    --input: lab(92.36% -.86 -2.13);
+    --ring: lab(36.1% 37.89 -85.12);
+    --chart-1: lab(36.1% 37.89 -85.12);
     --chart-2: lab(51.4727% 68.4449 55.9028);
     --chart-3: lab(56.2784% 54.5394 -46.2099);
     --chart-4: lab(67.4575% -64.4251 -.41151);
     --chart-5: lab(70.12% 37.229 51.2585);
-    
-    --sidebar: lab(.875282% .173211 -1.61839);
-    --sidebar-foreground: lab(97.68% -.0000298023 .0000119209);
-    --sidebar-primary: lab(46.4789% -4.04388 -76.4089);
-    --sidebar-primary-foreground: lab(97.68% -.0000298023 .0000119209);
-    --sidebar-accent: lab(5.12075% .868224 -8.33661);
-    --sidebar-accent-foreground: lab(97.68% -.0000298023 .0000119209);
-    --sidebar-border: lab(7.05066% .969283 -9.04949);
-    --sidebar-ring: lab(46.4789% -4.04388 -76.4089);
+
+    --sidebar: lab(97.82% -.68 -1.61);
+    --sidebar-foreground: lab(8.85% -2.57 -6.23);
+    --sidebar-primary: lab(36.1% 37.89 -85.12);
+    --sidebar-primary-foreground: lab(100% 0 0);
+    --sidebar-accent: lab(92.36% -.86 -2.13);
+    --sidebar-accent-foreground: lab(14.86% -.83 -3.42);
+    --sidebar-border: lab(84.77% -1.41 -2.76);
+    --sidebar-ring: lab(36.1% 37.89 -85.12);
 
     --color-fd-info: lab(54.1736% 13.3369 -74.6839);
     --color-fd-warning: lab(72.7183% 31.8672 97.9407);
